syntax = "proto3";
package proto;

service GroundStationService {
    rpc streamPackets (StreamRequest) returns (stream DataBundle){}
    rpc sendCommand (Command) returns (Ack){}
    rpc sendSimCommand (SimCommand) returns (Ack){}
    rpc ping (Ping) returns (Pong){}
    rpc controlServer (ServerControl) returns (Ack){}
    rpc InitSim(SimInit) returns (Ack) {}
    rpc RequestSimConfigList (SimConfigListRequest) returns (SimConfigList) {}
}

message StreamRequest {
    bool All = 1;
    repeated string Parameters = 2;
}

message ServerControl{
    enum CommandEnum {
        LogServiceStart = 0;
        LogServiceStop = 1;
        DataStoreManagerStart = 2;
        DataStoreManagerStop = 3;
        BroadcasterStart = 4;
        BroadcasterStop = 5;
    }
    CommandEnum Command = 1;
}

message StartLogCommand {
    string name = 1;
}

message Command {
    string Origin = 1;
    string Node = 2;
    string CommandName= 3;
    int32 CommandId = 4;
    int32 PacketType = 5;
    repeated int32 Data = 6;
}

message SimCommand {
    enum SimCommandEnum {
        RunSimulator = 0;
        PauseSimulator = 1;
        //ResumeSimulator = 2;
        StopSimulator = 2;
        StartPush = 3;
    }
    SimCommandEnum Command = 1;
}

message Ack {
    bool Success = 1;
    string Message = 2;
}

message ServerStatus {
    bool DataStoreManagerRunning = 1;
    bool GRPCServerRunning = 2;
    bool BroadcasterRunning = 3;
    bool GSLoggerRunning = 4;
    repeated OpenPort OpenPorts = 5;
}

message OpenPort {
    int32 Port = 1;
    bool Serving = 2;
}

message Pong {
    ServerStatus Status = 1;
}

message Ping {}

message DataBundle {
    repeated Params Parameters = 1;
}

message DataPacket {
    string PacketName = 1;
    int32 PacketType = 2;
    int64 RxTime = 3;
    repeated Params Parameters = 4;
}

message Params {
    string PacketName = 1;
    string ParamName = 2;
    int64 RxTime = 3;
    Value Value = 4;
    string Units = 5;
}

message Value {
    int32 Index = 1;
    int64 Int64Value = 2;
    uint64 Uint64Value = 3;
    double DoubleValue = 4;
}

message SimInit {
    repeated string config_files = 1;
    repeated ConfigParameter config_params = 2;
    string output_dir = 3;
}
message ConfigParameter {
    string config_path = 1;
    string value = 2;
}

message SimConfigListRequest{}

message SimConfigList {
    repeated string configNames = 1;
}
